--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-% extends layout.html %
+{% extends layout.html %}
 
-% block title %
+{% block title %}
     Log-In
-% endblock %
+{% endblock %}
 
-% block main %
+{% block main %}
     <p>TODO</p>
-% endblock %
+{% endblock %}
