--- a/templates/login.html
+++ b/templates/login.html
@@ -7,3 +7,6 @@
 {% block main %}
     <p>TODO</p>
 {% endblock %}
+
+<!-- study jinja using cs50
+create a log-in page for users to log in including a form for username and password plus a button for submitting the user input -->
