--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,33 @@
 {% endblock %}
 
 {% block main %}
-    <p>TODO</p>
+    <!-- homepage -->
+<html>
+    <head>
+            <title>Web Application Title</title>
+            <link rel="stylesheet" href="style.css">
+    </head>
+    <body class= "banner">
+            <div class="navbar">
+                    <img src="logo.png" class="logo">
+                     <ul>
+                            <li><a href="Index.html">Home</a></li>
+                            <li><a href="Locations.html">Locations Near Me</a></li>
+                            <li><a href="Records.html">Medical Records</a></li>
+                            <li><a href="#">Login/Register</a></li>
+                    </ul>
+            </div>
+            <div class="homepage">
+                    <h1>TBD</h1>
+                    <p>TBD(Description of Site)</p>
+                    <div>
+                            <button type= "button"><span></span>button1</button>
+                    </div>
+            </div>
+    </body>
+
+</html>
+
 {% endblock %}
 
 <!-- the main page with all the stuff we discussed -->
