--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,21 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
+<!-- {% extends "layout.html" %}
 
 {% block title %}
-    Log-In
+    Home
 {% endblock %}
 
-{% block main %}
+{% block main %} -->
     <!-- homepage -->
 <html>
     <head>
-            <title>Web Application Title</title>
-            <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link href="styles.css" rel="stylesheet">
+        <title>Web Application Title</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body class= "banner">
             <div class="navbar">
@@ -32,6 +38,6 @@
 
 </html>
 
-{% endblock %}
+<!-- {% endblock %} -->
 
 <!-- the main page with all the stuff we discussed -->
