--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,19 @@
 {% block content %}
 
     <head>
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> -->
         <link href="/static/styles.css" rel="stylesheet">
-        <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet"> -->
-        <!-- <link rel="stylesheet" href="style.css"> -->
+
     </head>
     <body class= "banner">
-            <div class="navbar">
+            <!-- <div class="navbar">
                     <img src="images/logo.png" class="logo">
                      <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="locations.html">Locations Near Me</a></li>
-                            <li><a href="records.html">Medical Records</a></li>
+                            <li><a href="templates/index.html">Home</a></li>
+                            <li><a href="templates/locations.html">Locations Near Me</a></li>
+                            <li><a href="templates/records.html">Medical Records</a></li>
                             <li><a href="#">Login/Register</a></li>
                     </ul>
-            </div>
+            </div> -->
             <div class="homepage">
                     <h1>TBD</h1>
                     <p>TBD(Description of Site)</p>
