--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,19 +11,18 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('index')}}">FlaskBlog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            </ul>
-        </div>
+    <nav class="banner">
+        <a class="banner" href="{{ url_for('index')}}"></a>
     </nav>
+    <div class="navbar">
+        <img src="images/logo.png" class="logo">
+         <ul>
+                <li><a href="templates/index.html">Home</a></li>
+                <li><a href="templates/locations.html">Locations Near Me</a></li>
+                <li><a href="templates/records.html">Medical Records</a></li>
+                <li><a href="#">Login/Register</a></li>
+        </ul>
+    </div>
     <div class="container">
         {% block content %} {% endblock %}
     </div>
