--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,12 +15,12 @@
         <a class="banner" href="{{ url_for('index')}}"></a>
     </nav>
     <div class="navbar">
-        <img src="images/logo.png" class="logo">
+        <img src="templates/logo.png" class="logo">
          <ul>
-                <li><a href="templates/index.html">Home</a></li>
-                <li><a href="templates/locations.html">Locations Near Me</a></li>
-                <li><a href="templates/records.html">Medical Records</a></li>
-                <li><a href="#">Login/Register</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="locations.html">Locations Near Me</a></li>
+                <li><a href="records.html">Medical Records</a></li>
+                <li><a href="login.html">Login/Register</a></li>
         </ul>
     </div>
     <div class="container">
