--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <nav class="banner">
-        <a class="banner" href="{{ url_for('index')}}"></a>
+        <a class="banner" href="{bakgroung.jpg}"></a>
     </nav>
     <div class="navbar">
-        <img src="images/logo.png" class="logo">
+        <img src="logo.png" class="logo">
          <ul>
                 <li><a href="templates/index.html">Home</a></li>
                 <li><a href="templates/locations.html">Locations Near Me</a></li>
