--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -1,10 +1,11 @@
 <!-- Locations Near Me -->
-<html>
-        <head>
-                <title>Web Application Title</title>
-                <link rel="stylesheet" href="style.css">
-        </head>
-        <body class= "bannerlocations">
-        </body>
+{% extends "layout.html" %}
 
-</html>
+{% block title %}
+    locations
+{% endblock %}
+
+{% block content %}
+        <p>TODO</p>
+
+{% endblock %}
