--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,16 +11,13 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="banner">
-        <a class="banner" href="{bakgroung.jpg}"></a>
-    </nav>
     <div class="navbar">
         <img src="logo.png" class="logo">
          <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/locations">Locations Near Me</a></li>
                 <li><a href="/records">Medical Records</a></li>
-                <li><a href="/login">Login/Register</a></li>
+                <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
         </ul>
     </div>
