--- a/templates/Records.html
+++ b/templates/Records.html
@@ -1,10 +1,13 @@
 <!-- Medical Records -->
-<html>
-        <head>
-                <title>Web Application Title</title>
-                <link rel="stylesheet" href="style.css">
-        </head>
-        <body class= "bannerRecords">
-        </body>
+{% extends "layout.html" %}
 
-</html>
+{% block title %}
+    Records
+{% endblock %}
+
+{% block content %}
+        <p>TODO</p>
+
+
+
+{% endblock %}
