--- a/static/styles.css
+++ b/static/styles.css
@@ -4,9 +4,12 @@
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
 .banner{
+    width: 100%;
+    height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
     background-size: cover;
-    background-position: center;   
+    background-position: center; 
+    background-repeat: no-repeat;  
 }
 .navbar{
     width: 85%;
@@ -46,15 +49,16 @@
 }
 .homepage{
     width: 100%;
-    position: absolute;
+    position: static;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
     color: white;
 }
 .homepage h1{
+    font-weight: bold;
     font-size: 70px;
-    margin-top: 80px;
+    margin-top: 25%;
 }
 .homepage p{
     margin: 20px auto;
