--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="navbar">
-        <img src="logo.png" class="logo">
+        <img src="/static/logo.png" class="logo">
          <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/locations">Locations Near Me</a></li>
