--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,13 @@
     Register
 {% endblock %}
 
-{% block main %}
-    <p>TODO</p>
+{% block content %}
+<head>
+    <link href="/static/styles.css" rel="stylesheet">
+
+</head>
+<body class= "banner">
+</body>
 {% endblock %}
 
 <!-- create a register page with the forms for name, username, password, and an option to use whether they are registering as hospital admin or patient -->
