--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,28 @@
     Log-In
 {% endblock %}
 
-{% block main %}
-    <p>TODO</p>
+{% block content %}
+<head>
+    <link href="/static/styles.css" rel="stylesheet">
+
+</head>
+<body class= "bannerLogin">
+    <div class="loginbox">
+        <h1 class= "h1login">Log-In</h1>
+        <form>
+            <p>Username:</p>
+            <input type="text" name="" placeholder="Username">
+            <p>Password:</p>
+            <input type="text" name="" placeholder="Password"/>
+            <div class="login-submit">
+                <input type="submit" name="" value="Login"/>
+                <span></span> 
+            </div>
+        </form>
+    </div>
+</body>
 {% endblock %}
+
 
 <!-- study jinja using cs50
 create a log-in page for users to log in including a form for username and password plus a button for submitting the user input -->
