--- a/static/styles.css
+++ b/static/styles.css
@@ -176,9 +176,9 @@ button:hover{
 .login-submit span{
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 118px;
+    margin-bottom: 70px;
     background: #ffaaaa;
-    height: 38px;
+    height: 40px;
     width: absolute;
     border-radius: 25px;
     position: absolute;
@@ -191,5 +191,87 @@ button:hover{
     width: 290px;
 }
 .login-submit:hover{
+    border:none;
+}
+/* Register */
+.bannerRegister{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;  
+}
+.registerbox{
+    width: 335px;
+    height: 500px;
+    background: white;
+    color: black;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    border: 2px #ffaaaa solid;
+}
+.h1register{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 28px;
+}
+.registerbox p{
+    margin: 0;
+    margin-left: 15px;
+    padding: 0;
+    font-weight: bold;
+}
+.registerbox input{
+    width: 290px;
+    margin-left: 15px;
+    margin-bottom: 25px;
+}
+.registerbox input[type="text"], input[type="password"]{
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    height: 50px;
+    color: black;
+    font-size: 15px;
+}
+.register-submit input[type="submit"]{
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #ffaaaa;
+    color: black;
+    font-size: 18px;
+    border-radius: 25px;
+    border: 2px solid #ffaaaa;
+    background: transparent;
+    color: black;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+.register-submit span{
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 56px;
+    background: #ffaaaa;
+    height: 40px;
+    width: absolute;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s
+}
+.register-submit:hover span{
+    width: 290px;
+}
+.register-submit:hover{
     border:none;
 }
