--- a/templates/register.html
+++ b/templates/register.html
@@ -22,6 +22,11 @@
             <div class="login-submit">
             <p>Confirm Password:</p>
             <input type="text" name="" placeholder="Confirm Password"/>
+            <select>
+                <option disabled selected value="">Type</option>
+                <option>Admin</option>
+                <option>Patient</option>
+            </select>
             <div class="register-submit">
                 <input type="submit" name="" value="Register"/>
                 <span></span> 
