--- a/templates/login.html
+++ b/templates/login.html
@@ -16,9 +16,9 @@
         <br>
         <form>
             <p>Username:</p>
-            <input type="text" name="" placeholder="Username">
+            <input type="text" name="" placeholder="Username" id = "username">
             <p>Password:</p>
-            <input type="text" name="" placeholder="Password"/>
+            <input type="text" name="" placeholder="Password" id = "password"/>
             <div class="login-submit">
                 <input type="submit" name="" value="Login"/>
                 <span></span> 
