--- a/templates/register.html
+++ b/templates/register.html
@@ -16,13 +16,13 @@
         <br>
         <form>
             <p>Username:</p>
-            <input type="text" name="" placeholder="Username">
+            <input type="text" name="" placeholder="Username" id = "username">
             <p>Password:</p>
-            <input type="text" name="" placeholder="Password"/>
+            <input type="text" name="" placeholder="Password" id = "password"/>
             <div class="login-submit">
             <p>Confirm Password:</p>
-            <input type="text" name="" placeholder="Confirm Password"/>
-            <select>
+            <input type="text" name="" placeholder="Confirm Password" id = "name"/>
+            <select id = "type">
                 <option disabled selected value="">Type</option>
                 <option>Admin</option>
                 <option>Patient</option>
