--- a/templates/register.html
+++ b/templates/register.html
@@ -19,70 +19,16 @@
             <input type="text" name="" placeholder="Username" id = "username">
             <p>Password:</p>
             <input type="text" name="" placeholder="Password" id = "password"/>
-            <div class="login-submit">
             <p>Confirm Password:</p>
-<<<<<<< HEAD
             <input type="text" name="" placeholder="Confirm Password"/>
             <p>Name: First Last</p>
             <input type="text" name="" placeholder="First Last"/>
-            <p></p>
-            <select>
-                <option disabled selected value="">Date</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
-                <option>7</option>
-                <option>8</option>
-                <option>9</option>
-                <option>10</option>
-                <option>11</option>
-                <option>12</option>
-                <option>13</option>
-                <option>14</option>
-                <option>15</option>
-                <option>16</option>
-                <option>17</option>
-                <option>18</option>
-                <option>19</option>
-                <option>20</option>
-                <option>21</option>
-                <option>22</option>
-                <option>23</option>
-                <option>24</option>
-                <option>25</option>
-                <option>26</option>
-                <option>27</option>
-                <option>28</option>
-                <option>29</option>
-                <option>30</option>
-                <option>31</option>
-            </select>
-            <select>
-                <option disabled selected value="">Month</option>
-                <option>January</option>
-                <option>February</option>
-                <option>March</option>
-                <option>April</option>
-                <option>May</option>
-                <option>June</option>
-                <option>July</option>
-                <option>August</option>
-                <option>September</option>
-                <option>October</option>
-                <option>November</option>
-                <option>December</option>
-            </select>
+            <label for="start">DOB</label>
 
-            <input class="year" type="text" name="year" placeholder="year"/>
-
+            <input type="date" id="DOB" name="Date-of-Birth"
+                   value="2021-06-12"
+                   min="1900-01-01" max="2021-06-12">
             <select>
-=======
-            <input type="text" name="" placeholder="Confirm Password" id = "name"/>
-            <select id = "type">
->>>>>>> 1ea9163b38a3efdd829c882650038665bff27193
                 <option disabled selected value="">Type</option>
                 <option>Admin</option>
                 <option>Patient</option>
