--- a/templates/Records.html
+++ b/templates/Records.html
@@ -6,8 +6,11 @@
 {% endblock %}
 
 {% block content %}
-        <p>TODO</p>
+    <head>
+        <link href="/static/styles.css" rel="stylesheet">
 
-
-
+    </head>
+    <body class= "bannerLocations">
+        
+    </body>
 {% endblock %}
