--- a/templates/Records.html
+++ b/templates/Records.html
@@ -2,12 +2,10 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Records
+    records
 {% endblock %}
 
 {% block content %}
         <p>TODO</p>
-
-
 
 {% endblock %}
