--- a/static/styles.css
+++ b/static/styles.css
@@ -4,13 +4,34 @@
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
 /* Layout */
-.banner{
+/* .banner{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
     background-size: cover;
     background-position: center; 
-    background-repeat: no-repeat;  
+    background-repeat: no-repeat; 
+} */
+.banner{
+    background:url(../static/background.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;  
+}
+.fixednavbar{
+    width: 100%;
+    height: 100px;
+    background: #2c2c2cf3;
+    color: black;
+    top: 18px;
+    left: 50%;
+    position: fixed;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    border-bottom: 5px #ffaaaa solid;
+    z-index: 10;
 }
 .navbar{
     width: 85%;
@@ -33,7 +54,7 @@
 }
 .navbar ul li a{
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .navbar ul li::after{
     content: '';
@@ -55,7 +76,7 @@
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .homepage h1{
     font-weight: bold;
@@ -195,17 +216,18 @@ button:hover{
 }
 /* Register */
 .bannerRegister{
-    width: 100%;
-    height: 100vh;
+    background:url(../static/background.jpg);
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
+    background-attachment: fixed;
     background-size: cover;
-    background-position: center; 
-    background-repeat: no-repeat;  
+    background-repeat: no-repeat;
+    background-position: center;  
 }
 .registerbox{
-    margin-top: 70px;
+    margin-top: 125px;
+    margin-bottom: 100px;
     width: 330px;
-    height: 700px;
+    height: 720px;
     background: white;
     color: black;
     top: 50%;
@@ -296,4 +318,7 @@ button:hover{
     color: black;
     font-size: 15px;
     font-weight: bold;
+}
+.bannerRegister br{
+    vertical-align: bottom;
 }
