--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
+    <div class="fixednavbar">
     <div class="navbar">
         <img src="/static/logo.png" class="logo">
          <ul>
@@ -21,6 +22,7 @@
                 <li><a href="/register">Register</a></li>
         </ul>
     </div>
+  </div>
     <div class="container">
         {% block content %} {% endblock %}
     </div>
