--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,17 @@
             <div>
                     <button type= "button"><span></span>button1</button>
             </div>
-    </div>
+        </div>
+        <div class="htextbox">
+            <br>
+            <h1>Our Goal</h1>
+            <img src="../static/indeximg1.png" alt="indeximg1" width="350px">
+            <br>
+            <p>text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+            text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+            </p>
+            <br><br><br><br><br>
+        </div>
     </body>
 
 
