--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="htextbox">
             <br>
-            <h1>Our Goal</h1>
-            <img src="../static/indeximg1.png" alt="indeximg1" width="350px">
+            <img src="../static/indeximg1.png" alt="indeximg1" width="425px">
+            <h1>TBD</h1>
             <br>
             <p>text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
