--- a/templates/register.html
+++ b/templates/register.html
@@ -28,6 +28,15 @@
                 <option>Admin</option>
                 <option>Patient</option>
             </select>
+            <br>
+            <br>
+            <p>Gender</p>
+            <select class="dropdowntype">
+                <option disabled selected value="">Select-here</option>
+                <option>Male</option>
+                <option>Female</option>
+                <option>Other</option>
+            </select>
             <br></br>
             <p>Date-of-Birth</p>
             <input type="date" id="DOB" name="Date-of-Birth"
