--- a/templates/register.html
+++ b/templates/register.html
@@ -17,9 +17,9 @@
             <p>Username:</p>
             <input type="text" name="" placeholder="Username" id = "username">
             <p>Password:</p>
-            <input type="text" name="" placeholder="Password" id = "password"/>
+            <input type="password" name="" placeholder="Password" id = "password"/>
             <p>Confirm Password:</p>
-            <input type="text" name="" placeholder="Confirm Password" id = "confirm"/>
+            <input type="password" name="" placeholder="Confirm Password" id = "confirm"/>
             <p>Name: First Last</p>
             <input type="text" name="" placeholder="First Last" id = "name"/>
             <p>Account-Type</p>
