--- a/static/styles.css
+++ b/static/styles.css
@@ -130,8 +130,7 @@ button:hover{
     left: 0%;
     position: absolute;
     box-sizing: border-box;
-    border-bottom: 5px #ffaaaa solid;
-    border-top: 5px #ffaaaa solid;
+    border: 5px #ffaaaa solid;
 }
 .htextbox h1{
     margin-right: 30%;
@@ -158,7 +157,15 @@ button:hover{
     margin-right: 30%;
     overflow-wrap:initial;
 }
-
+.htextbox h6{
+    margin-left: 21.5%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:darker;
+    font-size: 30px;
+    display: flex;
+    overflow-wrap:initial;
+}
 /* Locations Near Me */
 .bannerLocations{
     background: black;
