--- a/static/styles.css
+++ b/static/styles.css
@@ -125,7 +125,7 @@ button:hover{
     width: 86%;
     margin-left: 7%;
     height: 500px;
-    background: #fffffff3;
+    background: #ffffff;
     color: black;
     left: 0%;
     position: absolute;
@@ -136,7 +136,7 @@ button:hover{
     margin-right: 30%;
     margin-left: 7%;
     text-align: center;
-    color: #2c2c2cf3;
+    color: #000000f3;
     font-weight: none;
     font-size: 70px;
     text-decoration: underline #ffaaaa;
@@ -158,6 +158,55 @@ button:hover{
     overflow-wrap:initial;
 }
 .htextbox h6{
+    margin-left: 21.5%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:darker;
+    font-size: 30px;
+    display: flex;
+    overflow-wrap:initial;
+}
+
+/* this is htextbox2 */
+.htextbox2{
+    margin-top: 25px;
+    margin: 0px;
+    width: 86%;
+    margin-left: 7%;
+    height: 500px;
+    background: #ffffff;
+    color: black;
+    left: 0%;
+    position: absolute;
+    box-sizing: border-box;
+    border: 5px #ffaaaa solid;
+}
+.htextbox2 h1{
+    margin-right: 30%;
+    margin-left: 7%;
+    text-align: center;
+    color: #000000f3;
+    font-weight: none;
+    font-size: 70px;
+    text-decoration: underline #ffaaaa;
+}
+.htextbox2 img{
+    float: right;
+    margin-left: 3%;
+    display: flex;
+    margin-right: 7%;
+}
+.htextbox2 p{
+    margin-left: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:lighter;
+    font-size: 30px;
+    display: flex;
+    margin-right: 30%;
+    overflow-wrap:initial;
+}
+.htextbox2 h6{
     margin-left: 21.5%;
     text-align: center;
     color: #2c2c2cf3;
