--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -5,7 +5,7 @@
     locations
 {% endblock %}
 
-{% block content %}
+{% block main %}
 <head>
     <link href="/static/styles.css" rel="stylesheet">
 
