--- a/templates/Records.html
+++ b/templates/Records.html
@@ -5,17 +5,7 @@
     records
 {% endblock %}
 
-{% block content %}
-<<<<<<< HEAD
+{% block <main></main> %}
         <p>TODO</p>
 
-=======
-    <head>
-        <link href="/static/styles.css" rel="stylesheet">
-
-    </head>
-    <body class= "bannerLocations">
-        
-    </body>
->>>>>>> 947b29424b808426befe35d7561ce52fee2543ab
 {% endblock %}
