--- a/templates/apology.html
+++ b/templates/apology.html
@@ -7,5 +7,9 @@
 {% endblock %}
 
 {% block main %}
+    <head>
+        <link href="/static/styles.css" rel="stylesheet">
+
+    </head>
     <img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png" title="{{ top }}">
 {% endblock %}
