--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     InstaMed
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
     <head>
         <link href="/static/styles.css" rel="stylesheet">
