--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,11 +20,13 @@
                 <li><a href="/records">Medical Records</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
+                <li><a href="/logout">Log Out</a></li>
+              </ul>
         </ul>
     </div>
   </div>
     <div class="container">
-        {% block content %} {% endblock %}
+        {% block main %} {% endblock %}
     </div>
 
     <!-- Optional JavaScript -->
