--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,12 @@
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
             <br><br><br><br><br>
+        <div class = "htextbox2">
+            <h1>Functions of the Website</h1>
+            <br>
+            
+
+        </div>
     </body>
 
 
