--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,17 +14,28 @@
     <div class="fixednavbar">
     <div class="navbar">
         <img src="/static/logo.png" class="logo">
-         <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/locations">Locations Near Me</a></li>
-                <li><a href="/records">Medical Records</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/logout">Log Out</a></li>
-              </ul>
-        </ul>
+        {% if session.user_id %}
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/locations">Locations Near Me</a></li>
+            <li><a href="/records">Medical Records</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+        {% else %}
+          <ul>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+          </ul>
+        {% endif %}
     </div>
   </div>
+  {% if get_flashed_messages() %}
+    <header>
+      <div class="alert alert-primary border text-center" role="alert">
+        {{ get_flashed_messages() | join(" ") }}
+      </div>
+    </header>
+  {% endif %}
     <div class="container">
         {% block main %} {% endblock %}
     </div>
