--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,37 +8,41 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>{% block title %} {% endblock %}</title>
+    <title>Instamed: {% block title %} {% endblock %}</title>
   </head>
   <body>
-    <div class="fixednavbar">
-    <div class="navbar">
-        <img src="/static/logo.png" class="logo">
-        {% if session.user_id %}
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/locations">Locations Near Me</a></li>
-            <li><a href="/records">Medical Records</a></li>
-            <li><a href="/logout">Log Out</a></li>
-          </ul>
-        {% else %}
-          <ul>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-          </ul>
-        {% endif %}
-    </div>
-  </div>
-  {% if get_flashed_messages() %}
-    <header>
-      <div class="alert alert-primary border text-center" role="alert">
-        {{ get_flashed_messages() | join(" ") }}
+    <nav>
+      <div class="fixednavbar">
+        <div class="navbar">
+            <img src="/static/logo.png" class="logo">
+            {% if session.user_id %}
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/locations">Locations Near Me</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+              </ul>
+            {% else %}
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/locations">Locations Near Me</a></li>
+                <li><a href="/records">Medical Records</a></li>
+                <li><a href="/logout">Log Out</a></li>
+              </ul>
+            {% endif %}
+        </div>
       </div>
-    </header>
-  {% endif %}
-    <div class="container">
-        {% block main %} {% endblock %}
-    </div>
+    </nav>
+    {% if get_flashed_messages() %}
+      <header>
+        <div class="alert alert-primary border text-center" role="alert">
+          {{ get_flashed_messages() | join(" ") }}
+        </div>
+      </header>
+    {% endif %}
+      <div class="container">
+          {% block main %} {% endblock %}
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
