--- a/templates/login.html
+++ b/templates/login.html
@@ -16,9 +16,9 @@
             <br>
             <form action = "/login" method = "post">
                 <p>Username:</p>
-                <input type="text" name="username" placeholder="Username">
+                <input type="text" name="username" autocomplete = "off" placeholder="Username">
                 <p>Password:</p>
-                <input type="text" name="password" placeholder="Password" />
+                <input type="text" name="password" autocomplete = "off" placeholder="Password" />
                 <div class="login-submit">
                     <input type="submit" name="" value="Login"/>
                     <span></span> 
