--- a/static/styles.css
+++ b/static/styles.css
@@ -123,7 +123,8 @@ button:hover{
     margin-top: 25px;
     margin: 0px;
     width: 30%;
-    margin-left: 7%;
+    margin-left: 2.5%;
+    margin-right: 60%;
     height: 400px;
     background: #ffffff;
     color: black;
@@ -166,8 +167,92 @@ button:hover{
     font-size: 20px;
     overflow-wrap:initial;
 }
+.htextbox2{
+    float: left;
+    margin-top: -365px;
+    width: 102%;
+    margin-left: 110%;
+    height: 400px;
+    background: #ffffff;
+    color: black;
+    left: 0%;
+    position: absolute;
+    box-sizing: border-box;
+    border: 5px #ffaaaa solid;
+    position:absolute;
+}
+.htextbox2 h1{
+    margin-right: 7%;
+    margin-left: 7%;
+    text-align: center;
+    color: #000000f3;
+    font-weight: none;
+    font-size: 40px;
+    text-decoration: underline #ffaaaa;
+}
+.htextbox2 p{
+    margin-left: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:lighter;
+    font-size: 18px;
+    display: flex;
+    margin-right: 7%;
+    overflow-wrap:initial;
+}
+.htextbox2 h6{
+    margin-left: 7%;
+    margin-right: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight: bold;
+    font-size: 20px;
+    overflow-wrap:initial;
+}
 
-/* this is htextbox2 */
+/* this is htextbox3 */
+.htextbox3{
+    float: left;
+    margin-top: -356px;
+    width: 102%;
+    margin-left: 110%;
+    height: 400px;
+    background: #ffffff;
+    color: black;
+    left: 0%;
+    position: absolute;
+    box-sizing: border-box;
+    border: 5px #ffaaaa solid;
+    position:absolute;
+}
+.htextbox3 h1{
+    margin-right: 7%;
+    margin-left: 7%;
+    text-align: center;
+    color: #000000f3;
+    font-weight: none;
+    font-size: 40px;
+    text-decoration: underline #ffaaaa;
+}
+.htextbox3 p{
+    margin-left: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:lighter;
+    font-size: 18px;
+    display: flex;
+    margin-right: 7%;
+    overflow-wrap:initial;
+}
+.htextbox3 h6{
+    margin-left: 7%;
+    margin-right: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight: bold;
+    font-size: 20px;
+    overflow-wrap:initial;
+}
 /* Locations Near Me */
 .bannerLocations{
     background: black;
