--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,18 @@
             </p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
-            <br><br><br><br><br>
         <div class = "htextbox2">
+            <br>
             <h1>Functions of the Website</h1>
             <br>
-            
-
+            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <br>
+        <div class = "htextbox3">
+            <br>
+            <h1>Functions of the Website</h1>
+            <br>
+            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <br>
         </div>
     </body>
 
