--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,16 @@
             <br>
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
+            <h6> <b>Join the Instamed Team Today!</b></h6>
         <div class = "htextbox3">
             <br>
             <h1>Functions of the Website</h1>
             <br>
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
+            <h6> <b>Join the Instamed Team Today!</b></h6>
         </div>
+        <br><br><br><br><br><br>
     </body>
 
 
