--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
             </p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
+        </div>
         <div class = "htextbox2">
             <br>
             <h1>Functions of the Website</h1>
@@ -30,14 +31,15 @@
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
+        </div>
         <div class = "htextbox3">
             <br>
-            <h1>Functions of the Website</h1>
+            <h1>Functions of the Website2</h1>
             <br>
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
-        </div>
+            </div>
         <br><br><br><br><br><br>
     </body>
 
