--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,28 +8,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Instamed: {% block title %} {% endblock %}</title>
+    <title> {% block title %} {% endblock %}</title>
   </head>
   <body>
     <nav>
       <div class="fixednavbar">
         <div class="navbar">
-            <img src="/static/logo.png" class="logo">
-            {% if session.user_id %}
-              <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/locations">Locations Near Me</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
-              </ul>
-            {% else %}
-              <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/locations">Locations Near Me</a></li>
-                <li><a href="/records">Medical Records</a></li>
-                <li><a href="/logout">Log Out</a></li>
-              </ul>
-            {% endif %}
+          <img src="/static/logo.png" class="logo">
+          {% if session %}
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/locations">Locations Near Me</a></li>
+              <li><a href="/records">Medical Records</a></li>
+              <li><a href="/logout">Log Out</a></li>
+            </ul>
+          {% else %}
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/locations">Locations Near Me</a></li>
+              <li><a href="/login">Login</a></li>
+              <li><a href="/register">Register</a></li>
+            </ul>
+          {% endif %}
         </div>
       </div>
     </nav>
@@ -40,9 +40,9 @@
         </div>
       </header>
     {% endif %}
-      <div class="container">
-          {% block main %} {% endblock %}
-      </div>
+    <div class="container">
+        {% block main %} {% endblock %}
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
