--- a/static/styles.css
+++ b/static/styles.css
@@ -89,24 +89,25 @@
     line-height: 25px;
 }
 button{
+    margin-left: 26%;
     width: 200px;
     padding: 15px 0;
     text-align: center;
-    margin: 20px 10px;
-    border-radius: 25px;
+    border-radius: 20px;
     font-weight: bold;
     border: 2px solid #ffaaaa;
     background: transparent;
-    color: white;
+    color: rgb(0, 0, 0);
     cursor: pointer;
-    position: relative;
+    position: absolute;
     overflow: hidden;
+    z-index: 3;
 }
 span{
     background: #ffaaaa;
     height: 100%;
     width: 0;
-    border-radius: 25px;
+    border-radius: 20px;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -125,7 +126,7 @@ button:hover{
     width: 30%;
     margin-left: 3%;
     margin-right: 60%;
-    height: 400px;
+    height: 435px;
     background: #ffffff;
     color: black;
     left: 0%;
@@ -171,7 +172,7 @@ button:hover{
     float: right;
     width: 30%;
     margin-left: 35%;
-    height: 400px;
+    height: 435px;
     background: #ffffff;
     color: black;
     left: 0%;
@@ -213,7 +214,7 @@ button:hover{
     float: right;
     width: 30%;
     margin-left: 67%;
-    height: 400px;
+    height: 435px;
     background: #ffffff;
     color: black;
     left: 0%;
