--- a/templates/index.html
+++ b/templates/index.html
@@ -23,22 +23,25 @@
             </p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>button1</button>
         </div>
         <div class = "htextbox2">
             <br>
-            <h1>Functions of the Website</h1>
+            <h1>TBD</h1>
             <br>
-            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>button1</button>
         </div>
         <div class = "htextbox3">
             <br>
-            <h1>Functions of the Website2</h1>
+            <h1>TBD</h1>
             <br>
-            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>button1</button>
             </div>
         <br><br><br><br><br><br>
     </body>
