--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             </p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>button1</button>
+            <button type= "button"><span></span>BUTTON</button>
         </div>
         <div class = "htextbox2">
             <br>
@@ -32,7 +32,7 @@
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>button1</button>
+            <button type= "button"><span></span>BUTTON</button>
         </div>
         <div class = "htextbox3">
             <br>
@@ -41,7 +41,7 @@
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
             <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>button1</button>
+            <button type= "button"><span></span>BUTTON</button>
             </div>
         <br><br><br><br><br><br>
     </body>
