--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -7,8 +7,8 @@
 
 {% block main %}
 <head>
+    <title>Locations</title>
     <link href="/static/styles.css" rel="stylesheet">
-
 </head>
 <body class= "banner">
     <div class="htextboxa">
@@ -19,6 +19,7 @@
         </p>
         <br>
         <br><br><br><br><br>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP" width="640" height="480"></iframe>
     </div>
 </body>
 {% endblock %}
