--- a/static/styles.css
+++ b/static/styles.css
@@ -500,3 +500,9 @@ button:hover{
     font-size: 20px;
     overflow-wrap:initial;
 }
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+  }
