--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -6,19 +6,19 @@
 {% endblock %}
 
 {% block main %}
-<head>
-    <link href="/static/styles.css" rel="stylesheet">
+    <head>
+        <link href="/static/styles.css" rel="stylesheet">
 
-</head>
-<body class= "banner">
-    <div class="htextboxa">
-        <br>
-        <h1>Locations</h1>
-        <br>
-        <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. Use the link below for information regarding the opening and closing times of hospitals in the area. 
-        </p>
-        <br>
-        <br><br><br><br><br>
-    </div>
-</body>
+    </head> -->
+    <body class= "banner">
+        <div class="htextboxa">
+            <br>
+            <h1>Locations</h1>
+            <br>
+            <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. Use the link below for information regarding the opening and closing times of hospitals in the area. 
+            </p>
+            <br>
+            <br><br><br><br><br>
+        </div>
+    </body>
 {% endblock %}
