--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -19,7 +19,12 @@
         </p>
         <br>
         <br><br><br><br><br>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP" width="640" height="480"></iframe>
+    </div>
+    <div class="mapcover">
+        <iframe  class="map"src="https://www.google.com/maps/d/u/0/embed?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP"></iframe>
+    </div>
+    <div class="mapcover">
+        <h1>Emergency Rooms near Montgomery NJ</h1>
     </div>
 </body>
 {% endblock %}
