--- a/static/styles.css
+++ b/static/styles.css
@@ -500,9 +500,26 @@ button:hover{
     font-size: 20px;
     overflow-wrap:initial;
 }
-#map {
-    height: 400px;
-    /* The height is 400 pixels */
+.map {
+    position: relative;
+    height: 800px;
     width: 100%;
-    /* The width is the width of the web page */
   }
+  .mapcover{
+    margin-top: 100px;
+    float: right;
+    margin-left: 40%;
+    height: 49px;
+    width: 55%;
+    left: 0;
+    background: #ffaaaa;
+    position: absolute;
+    box-sizing: border-box;
+}
+.mapcover h1{
+    text-align: center;
+    font-weight: bold;
+    font-size: 35px;
+    color: #000000;
+    text-decoration: underline white;
+}
