--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,7 @@
 } */
 .banner{
     background:url(../static/background.jpg);
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(background.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.39),rgba(0,0,0,0.75)),url(background.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
