--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         <link href="/static/styles.css" rel="stylesheet">
 
     </head>
-    <body class= "bannerLogin">
+    <body class= "banner">
         <div class="loginbox">
             <br>
             <h1 class= "h1login">Account Log-In</h1>
