--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
         <link href="/static/styles.css" rel="stylesheet">
 
     </head>
-    <body class= "bannerRegister">
+    <body class= "banner">
         <div class="registerbox">
             <br>
             <h1 class= "h1register">Account Registration</h1>
