--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                 <p>Username:</p>
                 <input type="text" name="username" autocomplete = "off" placeholder="Username">
                 <p>Password:</p>
-                <input type="text" name="password" autocomplete = "off" placeholder="Password" />
+                <input type="password" name="password" autocomplete = "off" placeholder="Password" />
                 <div class="login-submit">
                     <input type="submit" name="" value="Login"/>
                     <span></span> 
