--- a/templates/Records.html
+++ b/templates/Records.html
@@ -2,10 +2,13 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    records
+    Records
 {% endblock %}
 
 {% block main %}
-    <p>TODO</p>
+    <head>
+        <link href="/static/styles.css" rel="stylesheet">
 
+    </head>
+    <p>TODO</p>
 {% endblock %}
