--- a/static/styles.css
+++ b/static/styles.css
@@ -89,8 +89,9 @@
     line-height: 25px;
 }
 button{
-    margin-left: 26%;
-    width: 200px;
+    align-self: center;
+    margin-left: 25%;
+    width: 50%;
     padding: 15px 0;
     text-align: center;
     border-radius: 28px;
