--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+    font-family: "Segoe UI";
 }
 /* Layout */
 /* .banner{
@@ -14,7 +14,7 @@
 } */
 .banner{
     background:url(../static/background.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.39),rgba(0,0,0,0.75)),url(background.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.171),rgba(0,0,0,0.75)),url(background.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -82,6 +82,7 @@
     font-weight: bold;
     font-size: 70px;
     margin-top: 33%;
+    text-decoration: underline #ffaaaa;
 }
 .homepage p{
     margin: 20px auto;
